# template_test

./: pyproject.toml
template_test/: __init__.py  main.py
workflow/: config.yaml  main.smk
workflow/scripts/: evaluate.py  predict.py  train.py
